chore: class AppEnvDeployRequested to communicate with app deployer event stack
